[gd_scene load_steps=2 format=3 uid="uid://bv20wuwjym7re"]

[ext_resource type="Script" uid="uid://dvuhu70mj5lkb" path="res://scenes/ui/hud.gd" id="1_0mwgc"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0mwgc")

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 1
offset_left = 16.0
offset_top = 16.0
offset_right = 256.0
offset_bottom = 43.0
show_percentage = false

[node name="BottomAnchor" type="Control" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="BottomBar" type="PanelContainer" parent="BottomAnchor"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBox" type="HBoxContainer" parent="BottomAnchor/BottomBar"]
layout_mode = 2
theme_override_constants/separation = 10
